--- a/Docker/python/Dockerfile
+++ b/Docker/python/Dockerfile
@@ -1,10 +1,14 @@
 FROM python:3.8
 
-RUN pip install --upgrade pip
+RUN mkdir -p /usr/src/app/
 
+WORKDIR /usr/src/app/
+
+#COPY . /usr/src/app/
+
+RUN pip install --upgrade pip
 RUN pip install gspread telebot mysql-connector-python
 
+EXPOSE 8080
 
-
-# Запускаем команду по умолчанию при старте контейнера
 CMD ["python", "main.py"]
