--- a/docker-compose.yaml
+++ b/docker-compose.yaml
@@ -6,13 +6,15 @@ services:
     build:
       context: "./Docker/python"
     ports:
-      -80:80
+      - "8080:80"
     volumes:
-      -./src/python:/etc
+      - "./Docker/volumes/python:/usr/src/app"
 
   mysql:
     image: mysql:8
     environment:
       - MYSQL_ROOT_PASSWORD=root
+    ports:
+      - "3306:3306"
     volumes:
       - "./Docker/volumes/mysql:/var/lib/mysql"
